<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activites.login">
    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".LoginActivity"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:background="@color/purple_700">

                <TextView
                    android:id="@+id/textView_login_head"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/white"
                    android:text="Welcome back!"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <TextView
                    android:id="@+id/textView_login_instruction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="Please log in to continue"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"

                android:padding="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/RL_email"
                    android:layout_marginTop="20dp"
                    >

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:id="@+id/imageViewEmail"

                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>

                    <TextView
                        android:id="@+id/textView_login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:text="Email*"
                        android:layout_toEndOf="@id/imageViewEmail"/>

                    <View
                        android:layout_width="250dp"
                        android:layout_height="1dp"
                        android:id="@+id/divider_email"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/textView_login_email"
                        android:background="@android:color/darker_gray"/>

                    <EditText
                        android:id="@+id/editText_login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textView_login_email"
                        android:background="@android:color/transparent"
                        android:layout_toEndOf="@id/imageViewEmail"
                        android:hint="Enter email"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"

                        android:inputType="textEmailAddress"
                        android:padding="6dp"
                        android:textSize="16sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/RL_pwd"
                    android:layout_below="@id/RL_email"

                    android:layout_marginTop="10dp">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:id="@+id/imageViewPwd"

                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>

                    <TextView
                        android:id="@+id/textView_login_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/imageViewPwd"
                        android:padding="6dp"
                        android:text="Password*" />

                    <View
                        android:layout_width="250dp"
                        android:layout_height="1dp"
                        android:id="@+id/divider_pwd"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/textView_login_pwd"
                        android:background="@android:color/darker_gray"/>

                    <EditText
                        android:id="@+id/editText_login_pwd"
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textView_login_pwd"
                        android:layout_toEndOf="@id/imageViewPwd"
                        android:background="@android:color/transparent"
                        android:hint="Enter password"

                        android:inputType="textPassword"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:padding="6dp"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/imageView_show_hide_pwd"
                        android:layout_width="33dp"
                        android:layout_height="33dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_below="@id/textView_login_pwd" />

                </RelativeLayout>

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/RL_pwd"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="70dp"
                    android:layout_centerHorizontal="true"
                    android:text="Login" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_below="@id/button_login"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/textView_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="Do not have an account?"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/textView_register_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register"
                        android:textColor="@color/purple_700"
                        android:textAlignment="center"
                        android:clickable="true"
                        android:focusable="true"
                        />
                </LinearLayout>



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/button_login"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_alignParentEnd="true"
                    android:orientation="vertical">




                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:elevation="10dp"
                    android:visibility="gone" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>