...

<!--    <TextView-->
<!--        android:id="@+id/amount"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:fontFamily="@font/roboto_bold"-->
<!--        android:text="1000"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.666"-->
<!--        android:layout_marginStart="16dp"-->
...
                android:layout_weight="1"
                android:background="@drawable/accounts_bg"
                android:paddingLeft="5dp"
                android:paddingTop="2dp"
                android:paddingRight="5dp"
                android:paddingBottom="2dp"
                android:text="Cash"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/transactionDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
